--- a/server/package.json
+++ b/server/package.json
@@ -11,9 +11,12 @@
     "cors": "^2.8.5",
     "debug": "~2.6.9",
     "dotenv": "^8.0.0",
+    "eth-sig-util": "^2.2.0",
+    "ethereumjs-util": "^6.1.0",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.6.4",
     "morgan": "~1.9.1"
   }
